# old-coap-archived

./: .gitattributes  .gitignore  .travis.yml  .uncrustify.cfg  CONTRIBUTING.md  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.old  NEWS.md  README.md  SMCP.1  TODO.md  aclocal.m4  assert_macros.h  bootstrap.sh  btree.c  btree.h  cmd_get.c  cmd_list.c  cmd_pair.c  cmd_pair.h  cmd_post.c  cmd_test.c  coap.c  coap.h  configure  configure.ac  dict.c  dict.h  doxygen.cfg.in  fasthash.h  git-update-bootstrap-tags  help.h  ll.c  ll.h  main.c  notes.txt  (+26 more)
.travis/: after_success.sh  before_install.sh  before_script.sh  deploy.prv.enc  deploy.pub  script.sh
SMCP.xcodeproj/: project.pbxproj
SMCP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
contiki-src/: Makefile.smcp  led-node.c  led-node.h  sensor-node.c  sensor-node.h  smcp-contiki-config.h  smcp-task.c  smcp-task.h
contiki-src/examples/smcp-complex/: Makefile  smcp-complex.c
contiki-src/examples/smcp-plugtest/: Makefile  smcp-plugtest.avr-raven.gdb  smcp-plugtest.c
contiki-src/examples/smcp-simple/: .gitignore  Makefile  smcp-simple.c
contiki-src/examples/smcp-test/: .gitignore  Makefile  smcp-test.c
doc/: Makefile.in  gateway.txt
docs/: Makefile.am  Makefile.in  auth.txt  oldnotes.txt  smcpctl.1  smcpd.example.conf
etc/: Dockerfile  build-in-docker.sh  run-in-docker.sh  smcp.rb
m4/: libtool.m4  ltmain.sh  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
smcp-plugtest-client/: main.c  smcp_plugtest_client.1
src/: Makefile.am  Makefile.in  config.h.in  version.c.in  version.h
src/examples/: Makefile.am  Makefile.in  example-1.c  example-2.c  example-3.c  example-4.c  example-multicast-request.c
src/foxy/: Makefile.am  main.c
src/missing/: Makefile.am  Makefile.in  fgetln.h  fls.h  getline.c
src/missing/strlcat/: Makefile.am  Makefile.in  strlcat.c  strlcat.h  strlcat_test.c
src/missing/strlcpy/: Makefile.am  Makefile.in  strlcpy.c  strlcpy.h  strlcpy_test.c
src/plugtest/: Makefile.am  Makefile.in  README.md  main-client.c  main-server.c  plugtest-server.c  plugtest-server.h  selftest.sh
src/smcp/: Makefile.am  Makefile.in  assert-macros.h  assert_macros.h  btree  btree.c  btree.h  coap.c  coap.h  fasthash.c  fasthash.h  fifo.h  lc.h  ll.h  smcp-async.c  smcp-async.h  smcp-auth.c  smcp-auth.h  smcp-config.h.in  smcp-curl_proxy.c  smcp-curl_proxy.h  smcp-defaults.h  smcp-dtls.h  smcp-dupe.c  smcp-dupe.h  smcp-group.c  smcp-group.h  smcp-helpers.h  smcp-inbound.c  smcp-internal.h  smcp-list.c  smcp-logging.h  smcp-missing.c  smcp-missing.h  smcp-node-router.c  smcp-node-router.h  smcp-node.c  smcp-node.h  smcp-observable.c  smcp-observable.h  (+53 more)
src/smcp/old/: smcp-pairing.c  smcp-pairing.h  smcp-timer_node.c  smcp-timer_node.h
src/smcpctl/: Makefile.am  Makefile.in  cmd_delete.c  cmd_delete.h  cmd_get.c  cmd_get.h  cmd_list.c  cmd_list.h  cmd_monitor.c  cmd_monitor.h  cmd_pair.c  cmd_pair.h  cmd_post.c  cmd_post.h  cmd_repeat.c  cmd_repeat.h  cmd_test.c  cmd_test.h  help.c  help.h  main.c  smcpctl.h
src/smcpd/: Makefile.am  Makefile.in  cgi-node.c  cgi-node.h  group-node.c  group-node.h  help.h  main.c  pairing-node.c  pairing-node.h  smcpd.conf.in  system-node.c  system-node.h  ud-var-node.c  ud-var-node.h
src/tests/: Makefile.am  Makefile.in  test-concurrency.c
